--- a/app/views/front/browse/_tag_browser.html.erb
+++ b/app/views/front/browse/_tag_browser.html.erb
@@ -22,7 +22,7 @@
       });
 
       window.scrollTo(0,0);
-      $(".browser-contents").fadeOut(0).load("/contents/"+parameter, function(){}).fadeIn(300).scrollTop(1);
+      $(".browser-contents").fadeOut(0).load("/contents/shop/"+parameter, function(){}).fadeIn(300).scrollTop(1);
 
 
       // 반복문 만들어서 string으로 붙인 다음에 파라미터로 넘긴다
