--- a/app/views/front/items/_tag_browser.html.erb
+++ b/app/views/front/items/_tag_browser.html.erb
@@ -1,4 +1,9 @@
 
+	<% @head_tag.each do |tag| %>
+	<div class=tag-button id="<%=tag%>"  onclick="tag_toggle(this);tag_sort();ga('send','event','shop-tag','click','<%=tag%>');">
+		<span class=tag-text ><%= '#'+tag%></span>
+	</div>
+	<% end %>
 
 
 <script>
@@ -6,16 +11,18 @@
     //태그를 입력받는다 제이쿼리로 보낸다
     //제이슨으로 받아서 틀 하나 만들어두고 반복문으로 dom재생성한다
     //아니면 아래 부분만 새로운 데이터로 리로드한다
+    var page = 1;
+    var end_param = true;
     function tag_sort(){
-        tags = $('.tag-button-clicked');
+        var tags = $('.tag-button-clicked');
         parameter = "";
         $.each(tags,function(index, value){
             parameter = parameter +','+ value.getAttribute('id');
-
-
         });
-        $(".browser-contents").fadeOut(0).load("/contents/"+parameter, function(){}).fadeIn(300).scrollTop(1);
-
+        window.scrollTo(0,0);
+        page = 1;
+        end_param = true;
+        $(".browser-contents").fadeOut(0).load("/contents/item/"+parameter, function(){}).fadeIn(300).scrollTop(1);
 
         // 반복문 만들어서 string으로 붙인 다음에 파라미터로 넘긴다
         // index창에서는 파라미터 값에 따라 표시되는 record를 바꾸고
@@ -24,28 +31,40 @@
 
 
     }
-    var page = 1;
-    var index = "index";
     var browser = $(window);
     var switcher = true;
     window.scrollTo(0,0);
 
     browser.scroll(function(){
+        var index = $(".tag-button-clicked");
+        if(index.length === 0){
+            index = "index";
+        }else{
+            index = index.attr('id');
+        };
+
         if($('body')[0].scrollHeight-browser.scrollTop()<browser.outerHeight()+40)
         {
-            if(switcher) {
+            if(switcher&end_param) {
                 $(".body-divide>.contents-loading:last-child").show();
 
-                $("<div>").load("/slide_contents/item/" + index + "/" + page, function () {
-                    append_str = $(this).find(".body-divide");
+                $("<div>").load("/slide_contents/item/" + index + "/" + page, function (data) {
+                    console.log(data);
+                    if(data==="nil"){
+                        $(".contents-loading").hide();
+                        end_param = false;
+                        $(".body-divide").attr('style','padding-bottom:15%;');
+                    }else {
+                        append_str = $(this).find(".body-divide");
 
-                    $(".browser-contents").find(".body-divide")[0].append(append_str[0]);
-                    $(".body-divide>div>a").unwrap();
+                        $(".browser-contents").find(".body-divide")[0].append(append_str[0]);
+                        $(".body-divide>div>a").unwrap();
 
-                    $(".browser-contents").find(".body-divide")[1].append(append_str[1]);
-                    $(".body-divide>div>a").unwrap();
+                        $(".browser-contents").find(".body-divide")[1].append(append_str[1]);
+                        $(".body-divide>div>a").unwrap();
 
-                    $(".contents-loading").hide();
+                        $(".contents-loading").hide();
+                    };
 
                 });
                 page = page + 1;
