--- a/app/views/front/frame/_footer.html.erb
+++ b/app/views/front/frame/_footer.html.erb
@@ -1,20 +1,22 @@
 <div class="footer-button shoplist" >
-  <span class="iconimg shop" onclick="section_transfer('shop');"></span>
+  <span class="iconimg shop" name=shop onclick="section_transfer('shop');"></span>
 </div>
 <div class="footer-button productlist">
-  <span class="iconimg plate" onclick="section_transfer('product');"></span>
+  <span class="iconimg product" name=product onclick="section_transfer('product');"></span>
 </div>
 <div class="footer-button likelist">
-  <span class="glyphicon glyphicon-heart" onclick="section_transfer('like');"></span>
+  <span class="iconimg like" name=like onclick="section_transfer('like');"></span>
 </div>
-<div class="footer-button etc">
-  <span class="glyphicon glyphicon-th-list" onclick="section_transfer('etc');"></span>
+<div class="footer-button etclist">
+  <span class="iconimg etc" name="etc" onclick="section_transfer('etc');"></span>
 </div>
 
 <script>
     function section_transfer(menu){
         window.stop();
         var menu = menu;
+        $("span[class*=clicked]").each(function(i,e){e.className+=e.getAttribute('name')})
+        $("."+menu).toggleClass(menu+"-clicked");
         $(".contents-frame").load("/section/"+menu,function(){});
 
     }
