--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -235,7 +235,7 @@ margin-top:24vh;
   bottom:0;
   width:100%;
   z-index: 10;
-  background: white;
+  background: rgba(232,232,232,0.7);
   border-top:1px #e8e8e8 solid;
   text-align: center;
 }
