--- a/app/views/front/frame/_footer.html.erb
+++ b/app/views/front/frame/_footer.html.erb
@@ -1,11 +1,14 @@
 <div class="footer-button shoplist" >
-  <span class="iconimg shop" name=shop onclick="section_transfer('shop');"></span>
+  <span class="iconimg shop shop-clicked" name=shop onclick="section_transfer('shop');"></span>
+</div>
+<div class="footer-button likeshoplist">
+  <span class="iconimg likeshop" name="likeshop" onclick="section_transfer('likeshop');"></span>
 </div>
 <div class="footer-button productlist">
   <span class="iconimg product" name=product onclick="section_transfer('product');"></span>
 </div>
-<div class="footer-button likelist">
-  <span class="iconimg like" name=like onclick="section_transfer('like');"></span>
+<div class="footer-button likeitemlist">
+  <span class="iconimg likeitem" name=likeitem onclick="section_transfer('likeitem');"></span>
 </div>
 <div class="footer-button etclist">
   <span class="iconimg etc" name="etc" onclick="section_transfer('etc');"></span>
