--- a/app/views/front/items/_contents.html.erb
+++ b/app/views/front/items/_contents.html.erb
@@ -2,33 +2,46 @@
   $("body").addClass("background-grey");
 </script>
 <div class="body-divide">
+  <% userlikeitems = current_user.userlikeitems.where("active=?",true).pluck(:product_id) %>
   <% @product1.each do |record| %>
-      <a href="<%=record.url%>">
-        <div class="modal-product-item">
+      <div class="modal-product-item">
+      <a href="<%=record.url%>" onclick="ga('send','event','product','<%=record.id%>');">
           <img class="modal-product-img" src="<%=record.img_url%>" onerror="imgError(this,'product',<%= record.id%>)"/>
-          <div class="modal-product-detail">
-            <span><%=record.title%></span><br>
-            <span><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</span>
-            <span></span>
-          </div>
-        </div>
       </a>
+      <% if !userlikeitems.include?(record.id)%>
+          <div class="likebutton-item" onclick="userlike(this,'item','<%= record.id%>')"></div>
+      <% else %>
+          <div class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>')"></div>
+      <% end %>
+        <a href="<%=record.url%>">
+            <div class="modal-product-detail">
+              <span><%=record.title%></span><br>
+              <span><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</span>
+              <span></span>
+            </div>
+        </a>
+      </div>
   <% end %>
   <div class="contents-loading" style="display:none;"></div>
 </div>
 <div class="body-divide">
   <% @product2.each do |record| %>
-      <% logger.info record %>
-      <a href="<%=record.url%>">
-        <div class="modal-product-item">
-          <img class="modal-product-img" src="<%=record.img_url%>" onerror="imgError(this,'product',<%= record.id%>)"/>
-          <div class="modal-product-detail">
-            <span><%=record.title%></span><br>
-            <span><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</span>
-          </div>
-        </div>
-      </a>
+      <div class="modal-product-item">
+        <a href="<%=record.url%>" onclick="ga('send','event','product','<%=record.id%>');">
+            <img class="modal-product-img" src="<%=record.img_url%>" onerror="imgError(this,'product',<%= record.id%>)"/>
+        </a>
+        <% if !userlikeitems.include?(record.id)%>
+            <div class="likebutton-item" onclick="userlike(this,'item','<%= record.id%>')"></div>
+        <% else %>
+            <div class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>')"></div>
+        <% end %>
+        <a href="<%=record.url%>">
+            <div class="modal-product-detail">
+                                               <span><%=record.title%></span><br>
+                                               <span><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</span>
+                                               </div>
+        </a>
+      </div>
   <% end %>
   <div class="contents-loading" style="display:none;"></div>
 </div>
-<!--<div class="contents-loading"></div>-->
