--- a/app/views/front/modal/_shop_product.html.erb
+++ b/app/views/front/modal/_shop_product.html.erb
@@ -49,10 +49,18 @@
     </div>
     <div class="modal-body">
       <div class="body-divide">
+        <% userlikeitems = current_user.userlikeitems.where("active=?",true).pluck(:product_id) %>
         <% @product1.each do |record| %>
         <a href="<%=record.url%>" onclick="ga('send','event','product','<%=record.id%>');">
           <div class="modal-product-item">
             <img class="modal-product-img" src="<%=record.img_url%>" onerror="imgError(this,'product',<%= record.id%>)"/>
+        </a>
+            <% if !userlikeitems.include?(record.id)%>
+                <div class="likebutton-item" onclick="userlike(this,'item','<%= record.id%>')"></div>
+            <% else %>
+                <div class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>')"></div>
+            <% end %>
+          <a href="<%=record.url%>" onclick="ga('send','event','product','<%=record.id%>');">
             <div class="modal-product-detail">
               <span><%=record.title%></span><br>
               <span><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</span>
@@ -68,6 +76,13 @@
         <a href="<%=record.url%>" onclick="ga('send','event','product','<%=record.id%>');">
           <div class="modal-product-item">
             <img class="modal-product-img" src="<%=record.img_url%>" onerror="imgError(this,'product',<%= record.id%>)"/>
+        </a>
+            <% if !userlikeitems.include?(record.id)%>
+                <div class="likebutton-item" onclick="userlike(this,'item','<%= record.id%>')"></div>
+            <% else %>
+                <div class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>')"></div>
+            <% end %>
+          <a href="<%=record.url%>" onclick="ga('send','event','product','<%=record.id%>');">
             <div class="modal-product-detail">
               <span><%=record.title%></span><br>
               <span><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</span>
