--- a/app/views/front/likelist/_contents-item-frame.html.erb
+++ b/app/views/front/likelist/_contents-item-frame.html.erb
@@ -1,6 +1,7 @@
 <Script>
   switcher = false;
   end_param = false;
+  window.scrollTo(0,0);
   $(".body-divide").attr('style','padding-bottom:15%;')
 </Script>
 <div class="browser-contents" style="margin-top:9vh;">
