--- a/app/views/front/browse/_contents.html.erb
+++ b/app/views/front/browse/_contents.html.erb
@@ -1,7 +1,6 @@
 <script>
   $("body").removeClass("background-grey");
 </script>
-
 	<% i=1
     @merchant.each do |record|
 
@@ -18,7 +17,12 @@
         </div>
       </div>
     </a>
-    <div class="likebutton-shop" onclick="userlike(this,'shop','<%= record.id%>');"></div>
+    <% %>
+    <% if @userlikeshops.include?(record.id) %>
+      <div class="likebutton-shop likebutton-shop-clicked" onclick="userlike(this,'shop','<%= record.id%>');"></div>
+    <% else %>
+      <div class="likebutton-shop" onclick="userlike(this,'shop','<%= record.id%>');"></div>
+    <% end %>
     <a onclick="shop_product_popup(<%=record.id%>);ga('send','event','shop-card','click','<%=record.id%>');">
       <div class=content-title>
         <span class="title-text"><%= record.title%></span>
