--- a/app/views/front/modal/_shop_product.html.erb
+++ b/app/views/front/modal/_shop_product.html.erb
@@ -49,13 +49,12 @@
     </div>
     <div class="modal-body">
       <div class="body-divide">
-        <% userlikeitems = current_user.userlikeitems.where("active=?",true).pluck(:product_id) %>
         <% @product1.each do |record| %>
         <a href="<%=record.url%>" onclick="ga('send','event','product','<%=record.id%>');">
           <div class="modal-product-item">
             <img class="modal-product-img" src="<%=record.img_url%>" onerror="imgError(this,'product',<%= record.id%>)"/>
         </a>
-            <% if !userlikeitems.include?(record.id)%>
+            <% if !@userlikeitems.include?(record.id)%>
                 <div class="likebutton-item" onclick="userlike(this,'item','<%= record.id%>')"></div>
             <% else %>
                 <div class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>')"></div>
@@ -77,7 +76,7 @@
           <div class="modal-product-item">
             <img class="modal-product-img" src="<%=record.img_url%>" onerror="imgError(this,'product',<%= record.id%>)"/>
         </a>
-            <% if !userlikeitems.include?(record.id)%>
+            <% if !@userlikeitems.include?(record.id)%>
                 <div class="likebutton-item" onclick="userlike(this,'item','<%= record.id%>')"></div>
             <% else %>
                 <div class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>')"></div>
