--- a/app/views/front/frame/_top_bar.html.erb
+++ b/app/views/front/frame/_top_bar.html.erb
@@ -1,4 +1,4 @@
-
-	<span class=service-title>PLATY</span>
+  <div class="itemfilter-button" onclick="item_filter_popup()" style="display:none;"></div>
+	<span class=service-title>내 그릇장</span>
 
 
