--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -11,5 +11,8 @@
 </div>
 <div class="modal fade shop-product-popup" id="test" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 </div>
+<div class="modal login-modal">
+  <%= render "front/modal/login"%>
+</div>
 
 
