--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -9,6 +9,7 @@
 *{
 //border:solid 1px black;
 }
+
 html, body{
 
 height:100%;
@@ -91,6 +92,7 @@ z-index: 10;
 //contents
 .contents-frame{
   height:100%;
+  overflow-x:disabled;
 }
 // tag-browser
 
