--- a/app/views/front/modal/_login.html.erb
+++ b/app/views/front/modal/_login.html.erb
@@ -6,6 +6,7 @@
       </div>
   </div>
   <div class="modal-body login-modal-body">
+    <p>로그인 후 마음에 드는 그릇을 내 그릇장에 저장해 보세요:)</p>
     <a href="/users/auth/naver"><div class="login-button naver"></div></a>
     <a href="/users/auth/kakao"><div class="login-button kakao"></div></a>
 
