--- a/app/views/front/frame/_footer.html.erb
+++ b/app/views/front/frame/_footer.html.erb
@@ -10,7 +10,7 @@
 <div class="footer-button likeitemlist">
   <span class="iconimg likeitem" name=likeitem onclick="section_transfer('likeitem');"></span>
 </div>
-<div class="footer-button etclist">
+<div class="footer-button etclist" style="display:none;">
   <span class="iconimg etc" name="etc" onclick="section_transfer('etc');"></span>
 </div>
 
