--- a/app/views/front/modal/_login.html.erb
+++ b/app/views/front/modal/_login.html.erb
@@ -1,4 +1,4 @@
-<div class="modal-dialog" role="document">
+<div class="modal-dialog" role="document" style="border-radius:15px;">
 <div class="modal-content login-modal-position">
   <div class="modal-header login-modal-header">
       <div class="modal-shoptitle">
