--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -476,7 +476,7 @@ margin-top:24vh;
 .login-modal-position{
   margin-top:25vh;
   background:transparent;
-  box-shadow:none;
+  border-radius:15px;
 }
 
 .login-modal-header{
