modal test remvoe

--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -9,7 +9,7 @@
 <div class="footer">
   <%= render "front/frame/footer"%>
 </div>
-<div class="modal fade shop-product-popup" id="test" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade shop-product-popup" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 </div>
 <div class="modal login-modal">
   <%= render "front/modal/login"%>
