filter popup embed

--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -11,6 +11,9 @@
 </div>
 <div class="modal fade shop-product-popup" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 </div>
+<div class="modal fade filter-popup" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <%= render "front/modal/product_filter"%>
+</div>
 <div class="modal login-modal">
   <%= render "front/modal/login"%>
 </div>
