--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,9 +44,7 @@
     }
 
     function item_filter_popup(){
-        $(".shop-product-popup").load("/item_filter",function(){
-           $(".shop-product-popup").modal('show');
-        });
+           $(".filter-popup").modal('show');
     }
 
     function login_popup(){
