--- a/app/views/front/modal/_product_filter.html.erb
+++ b/app/views/front/modal/_product_filter.html.erb
@@ -1,5 +1,5 @@
 <script>
-    $('div.modal').on('show.bs.modal', function() {
+    $('.shop-product-popup').on('show.bs.modal', function() {
         var modal = this;
         var hash = modal.id;
         window.location.hash = hash;
