--- a/app/views/front/modal/_product_filter.html.erb
+++ b/app/views/front/modal/_product_filter.html.erb
@@ -35,8 +35,9 @@
         var hashtag = style+','+purpose;
         //카테고리 스타일 용도를 층별로 모
 
-        $(".browser-contents").load('/contents/item/?id='+category+'&hashtag='+hashtag,function(){}).scrollTop(1);
+        $(".browser-contents").load('/contents/item/?id='+category+'&hashtag='+hashtag,function(){});
         $(".modal").modal('hide');
+        window.scrollTo(0,1);
     }
 
     function filter_toggle(a){
