--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -29,6 +29,13 @@ a:visited {color:black;}  /* visited link */
 a:hover {color:black;}  /* mouse over link */
 a:active {color:black;}
 
+.pcindex{
+  background-image:url(/assets/pcindex.jpg);
+  background-size:cover;
+  height:100%;
+  width:100%;
+}
+
 .background-grey{
   background:#e8e8e8;
 }
