--- a/app/views/front/items/_tag_browser.html.erb
+++ b/app/views/front/items/_tag_browser.html.erb
@@ -46,7 +46,7 @@
             index = category;
         };
 
-        if(index.length === 0){
+        if(index === undefined){
             index = "index";
         };
 
