--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -31,7 +31,7 @@ a:active {color:black;}
 
 .pcindex{
   background-image:url(/assets/pcindex.jpg);
-  background-size:cover;
+  background-size:100% 100%;
   height:100%;
   width:100%;
 }
