--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -79,7 +79,7 @@ z-index: 10;
       top: 10%;
       left: 10px;
       width: 20%;
-      background-image: url("/assets/ICON/header/filter.png");
+      background-image: url("http://platy.life/assets/ICON/filter.png");
       background-size: 50%;
       background-repeat:no-repeat;
       background-position: left;
