--- a/app/views/front/frame/_top_bar.html.erb
+++ b/app/views/front/frame/_top_bar.html.erb
@@ -1,4 +1,7 @@
-  <div class="itemfilter-button" onclick="item_filter_popup()" style="display:none;"></div>
+  <div class="itemfilter-button" onclick="item_filter_popup()"></div>
 	<span class=service-title>내 그릇장</span>
 
+  <script>
+    $(".itemfilter-button").hide();
+  </script>
 
