--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -452,7 +452,9 @@ margin-top:24vh;
 
 
 //필터 모달
-
+.filter-dialog{
+  height:95%;
+}
 .modal-filter-body{
   padding:1%;
   border-bottom: solid grey 1px;
