--- a/app/views/front/modal/_product_filter.html.erb
+++ b/app/views/front/modal/_product_filter.html.erb
@@ -50,7 +50,7 @@
     }
 
 </script>
-<div class="modal-dialog" role="document">
+<div class="modal-dialog filter-dialog" role="document">
   <div class="modal-content">
     <div class="modal-header">
       <div class="modal-header-left">
