--- a/app/views/front/frame/_contents-frame.html.erb
+++ b/app/views/front/frame/_contents-frame.html.erb
@@ -1,6 +1,6 @@
 <div class="tag-browser">
-  <%= render "front/browse/tag_browser" %>
+  <%= render "front/items/tag_browser" %>
 </div>
 <div class="browser-contents">
-  <%= render "front/browse/contents" %>
+  <%= render "front/items/contents" %>
 </div>
