--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes" />
-
+  <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
     <script>
       //에러이미지 서버 호출-인코딩
       function imgError(image,type,id) {
