--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -1,5 +1,12 @@
-
-
+<div class="modal intro">
+  <%= render "front/modal/intro/intro"%>
+</div>
+<div class="modal ask">
+  <%= render "front/modal/intro/ask"%>
+</div>
+<div class="modal login-modal">
+  <%= render "front/modal/login"%>
+</div>
 <div class=top-bar>
   <%= render partial: "front/frame/top_bar" %>
 </div>
@@ -14,8 +21,6 @@
 <div class="modal fade filter-popup" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <%= render "front/modal/product_filter"%>
 </div>
-<div class="modal login-modal">
-  <%= render "front/modal/login"%>
-</div>
+
 
 
