--- a/app/views/front/modal/_login.html.erb
+++ b/app/views/front/modal/_login.html.erb
@@ -6,33 +6,9 @@
       </div>
   </div>
   <div class="modal-body login-modal-body">
-    <p>로그인 후 마음에 드는 그릇을 내 그릇장에 저장해 보세요:)</p>
+    <p>로그인 하시고<br>당신을 위한 특별한 테이블웨어를 확인하세요</p>
     <a href="/users/auth/naver"><div class="login-button naver"></div></a>
     <a href="/users/auth/kakao"><div class="login-button kakao"></div></a>
-
-    <a id="kakao-login-btn" style="display:none;"></a>
-    <a href="http://developers.kakao.com/logout"></a>
-
-
   </div>
 </div>
 </div>
-<script type='text/javascript'>
-    Kakao.init('c73a1d8e4e61815c918d98d6b7922197');
-    // 카카오 로그인 버튼을 생성합니다.
-    Kakao.Auth.createLoginButton({
-        container: '#kakao-login-btn',
-        success: function(authObj) {
-            alert(JSON.stringify(authObj));
-            $.ajax({
-                url:'/kakao',
-                data:{token:authObj.access_token},
-                method:'POST'
-            });
-        },
-        fail: function(err) {
-            alert(JSON.stringify(err));
-        }
-    });
-    //]]>
-</script>
